--- a/WebContent/resources/css/estiloTemplate.css
+++ b/WebContent/resources/css/estiloTemplate.css
@@ -109,3 +109,12 @@
 	width: 250px
 }
 /**/
+
+/**/
+.emp1 .fc-event-skin {
+    background: red;
+}
+.emp2 .fc-event-skin {
+   background: green;
+ }
+/**/
