--- a/WebContent/resources/paradise-layout/css/layout-deepsea.css
+++ b/WebContent/resources/paradise-layout/css/layout-deepsea.css
@@ -486,7 +486,7 @@
   .dashboard .stats ul li .statsbar {
     width: 100%; } }
 .login-body {
-  background: url("#{resource['paradise-layout:images/login/bg-login.png']}");
+  background: url("#{resource['paradise-layout:images/login/este.jpg']}");
   background-size: cover;
   height: auto; }
   .login-body .login-panel {
